; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/boot/extr_tty.c_putchar.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/boot/extr_tty.c_putchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.biosregs = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @putchar(i32 %0) #0 section ".inittext" {
  %2 = alloca i32, align 4
  %3 = alloca %struct.biosregs, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, 10
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  call void @putchar(i32 13)
  br label %7

7:                                                ; preds = %6, %1
  %8 = call i32 @initregs(%struct.biosregs* %3)
  %9 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %3, i32 0, i32 0
  store i32 7, i32* %9, align 4
  %10 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %3, i32 0, i32 1
  store i32 1, i32* %10, align 4
  %11 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %3, i32 0, i32 2
  store i32 14, i32* %11, align 4
  %12 = load i32, i32* %2, align 4
  %13 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %3, i32 0, i32 3
  store i32 %12, i32* %13, align 4
  %14 = call i32 @intcall(i32 16, %struct.biosregs* %3, i32* null)
  ret void
}

declare dso_local i32 @initregs(%struct.biosregs*) #1

declare dso_local i32 @intcall(i32, %struct.biosregs*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
